# Mob-ILYAD-Dashboard

./: .gitignore  pyproject.toml
dashboard/: callbacks.py  collect_data.py  contants.py  layout.py  main.py
dashboard/assets/: style.css
dashboard/services/: graphs.py
data/01_input/: carte_patients__sample.xlsx  mobyliad_export__sample.csv
