[project]
name = "map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.0.0",
    "dash-ag-grid>=33.3.3",
    "dash-bootstrap-components>=2.0.4",
    "notebook>=7.5.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyproj>=3.7.2",
    "uv>=0.10.11",
]
